--- a/calculator/main.css
+++ b/calculator/main.css
@@ -40,6 +40,6 @@
     display: flex;
     flex-direction: row; 
     /* column */
-    gap: 4px;
+    gap: 4px; /*display: flex; flex-direction을 사용해야 gap속성 사용가능*/
     margin-bottom: 4px;
 }
